force-app/main/default/objects/Employee__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Skills</label>
    <length>10</length>
    <type>Text</type>
</CustomField>