force-app/main/default/objects/Employee__c/fields/Stipened__c.field-meta.xml
<CustomField>
    <fullName>Stipened__c</fullName>
    <label>Stipened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>