force-app/main/default/objects/Employee__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>