force-app/main/default/objects/Employee__c/listViews/Employee_list.listView-meta.xml
<ListView>
    <fullName>Employee_list</fullName>
    <columns>NAME</columns>
    <columns>Salary__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employee__c.Experienced</value>
    </filters>
    <label>Experienced Employee list</label>
</ListView>