force-app/main/default/objects/Employee__c/listViews/Trainee_Employee_List.listView-meta.xml
<ListView>
    <fullName>Trainee_Employee_List</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employee__c.Trainee</value>
    </filters>
    <label>Trainee Employee List</label>
</ListView>